--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@expo-google-fonts/poppins": "^0.2.3",
     "@expo/config-plugins": "~7.2.2",
     "expo": "~49.0.23",
+    "expo-font": "~11.4.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-updates": "~0.18.19",
@@ -21,11 +23,13 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-screens": "~3.22.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "styled-components": "^6.1.9"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@types/react": "~18.2.14",
+    "@types/styled-components-react-native": "^5.2.5",
     "babel-preset-expo": "^9.5.0",
     "jest-expo": "~49.0.0",
     "typescript": "^5.1.3"
